name:                diagrams
version:             0.1.0.0
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WriteRunDot
  build-depends:       base
                     , filepath
                     , graphviz
                     , template-haskell
  default-language:    Haskell2010

executable diagrams
  hs-source-dirs:      src
  main-is:             Diagrams.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl
                     , filepath
                     , graphviz
                     , haskell-src
                     , syb
                     , text
  other-modules:       WriteRunDot
  default-language:    Haskell2010
