name:                diagrams
version:             0.1.0.0
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JunoCommon
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable buzz
  hs-source-dirs:      src
  main-is:             Buzz.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable catalog
  hs-source-dirs:      src
  main-is:             Catalog.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable juno
  hs-source-dirs:      src
  main-is:             Juno.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diagrams
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable swagger
  hs-source-dirs:      src
  main-is:             Swagger.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable threepenny
  hs-source-dirs:      src
  main-is:             ThreePenny.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010
