name:                misc-diagrams
version:             0.1.0.0
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Juno.JunoCommon
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable buzz
  hs-source-dirs:      src
  main-is:             Buzz.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable catalog
  hs-source-dirs:      src
  main-is:             Catalog.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010

executable discrete
  hs-source-dirs:      src
  main-is:             Discrete.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , raw-strings-qq
                     , text
  default-language:    Haskell2010

executable junocmdcommit
  hs-source-dirs:      src/Juno
  main-is:             JunoCmdCommit.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , misc-diagrams
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable junoae
  hs-source-dirs:      src/Juno
  main-is:             JunoAE.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , misc-diagrams
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable junoserver
  hs-source-dirs:      src/Juno
  main-is:             JunoServer.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , misc-diagrams
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable junoservernow
  hs-source-dirs:      src/Juno
  main-is:             JunoServerNow.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , misc-diagrams
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable swagger
  hs-source-dirs:      src
  main-is:             Swagger.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , template-haskell
                     , text
  default-language:    Haskell2010

executable threepenny
  hs-source-dirs:      src
  main-is:             ThreePenny.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-graphviz-hc-util
                     , filepath
                     , graphviz
                     , text
  default-language:    Haskell2010
